# canvas-demo-nov-4

./: Cargo.toml  metadata.json
api/: canvas_demo:template.os-v0.wit
canvas-demo/: Cargo.toml
canvas-demo/src/: lib.rs
pkg/: manifest.json
pkg/ui/: index.html  script.js
