[package]
name = "canvas-demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
kinode-app-framework = { git = "https://github.com/kinode-dao/app-framework.git", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.24.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
